--- a/ahbottomnavigation/build.gradle
+++ b/ahbottomnavigation/build.gradle
@@ -1,5 +1,29 @@
 apply plugin: 'com.android.library'
 
+ext {
+    bintrayRepo = 'maven'
+    bintrayName = 'ah-bottom-navigation'
+
+    publishedGroupId = 'com.aurelhubert'
+    libraryName = 'AHBottomNavigation'
+    artifact = 'ahbottomnavigation'
+
+    libraryDescription = 'A library to reproduce the behavior of the Bottom Navigation guidelines from Material Design.'
+
+    siteUrl = 'https://github.com/aurelhubert/ahbottomnavigation'
+    gitUrl = 'https://github.com/aurelhubert/ahbottomnavigation.git'
+
+    libraryVersion = '0.1'
+
+    developerId = 'aurelhubert'
+    developerName = 'Aurelien Hubert'
+    developerEmail = 'aurel.hubert@gmail.com'
+
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
+}
+
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
@@ -8,7 +32,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
-        versionName "1.0"
+        versionName "0.1"
     }
     buildTypes {
         release {
@@ -23,3 +47,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
 }
+
+// Place it at the end of the file
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
