Bug fixes Add notifications Min SDK version is now 14

--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "aurelhubert.com.ahbottomnavigation"
+        applicationId "com.aurelhubert.ahbottomnavigation.demo"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
