--- a/project.config
+++ b/project.config
@@ -2,3 +2,11 @@
 	inheritFrom = All-Projects
 [submit]
 	action = rebase if necessary
+[access "refs/heads/*"]
+	create = group CM Apps Team
+	forgeAuthor = group CM Apps Team
+	forgeCommitter = group CM Apps Team
+	push = group CM Apps Team
+	label-Code-Review = -2..+2 group CM Apps Team
+	label-Verified = -1..+1 group CM Apps Team
+	submit = group CM Apps Team
