--- a/project.config
+++ b/project.config
@@ -6,7 +6,7 @@
 	create = group CM Apps Team
 	forgeAuthor = group CM Apps Team
 	forgeCommitter = group CM Apps Team
-	push = group CM Apps Team
+	push = +force group CM Apps Team
 	label-Code-Review = -2..+2 group CM Apps Team
 	label-Verified = -1..+1 group CM Apps Team
 	submit = group CM Apps Team
